# cartpole-reinforce-lang-comparison

./: .gitignore  README.md
cpp-flashlight/: .gitignore  CMakeLists.txt  CartPoleEnv.cpp  CartPoleEnv.h  ChooseAlong.cpp  ChooseAlong.h  Join.cpp  Join.h  ReinforceCartPole.cpp  ReinforceCartPoleSlowBatching.cpp  RollingMean.h
python-torch/: banditplayer.py  banditucbplayer.py  cartpole.py  cartpole_reinforce.py  device.py  epsilongreedyplayer.py  linearcontextualbandit.py  multiarmedbandit.py  normalgamma.py  policygradientplayer.py  reinforce.py  requirements.txt  simplecartpolepolicy.py  simulate.py  softmaxcontextualbanditpolicy.py  softmaxmultiarmedbanditpolicy.py  thompsonnormalplayer.py  traingradientpolicymultiarmedbandit.py
